# tick-dash

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: db.py  main.py  models.py
backend/migrations/: env.py
backend/migrations/versions/: 2d8a2e7fa409_create_tick_table.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: VWAPChart.tsx
frontend/src/hooks/: useTickStream.ts
