[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrea Perez",email = "azufandub@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "plotly (>=6.0.1,<7.0.0)"
]

[tool.poetry]
name = "tick-dash-backend"
version = "0.1.0"

packages = [{include = "app"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
ruff = "^0.11.9"
mypy = "^1.15.0"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
